src/scss/cover.scss
.cover-container {
  position: absolute;
  top: -100%;
  left: 0;
  height: 100vh;
  background-color: black;
  width: 100%;
  opacity: 1;
  transition: top 0.4s ease;
  z-index: $loading-overlay + 1;
  overflow-y: auto;
  overflow-x: hidden;
  color: $offwhite;

  &.showing {
    top: 0;
    left: 0;
  }
}

.cover-header {
  position: fixed;
  bottom: 20px;
  left: 0;
  width: 64px;
  right: 7px;
  left: auto;
  top: 7px;
  bottom: auto;
  border-radius: 6px;
  overflow: hidden;
  max-width: initial;
  justify-content: center;
  align-items: center;
  flex-direction: column;
  transition: all 0.6s ease;
  transition-delay: 0.3s;

  &.minimized {
    top: 78px;
    right: 7px;
    transition: all 0.6s ease;
    transition-delay: 0;
  }

  .cover-logo-container {
    display: block;
    padding: 0;
    img {
      display: block;
      width: 100%;
      height: auto;
    }
  }
}

.fullscreen-bg {
  &.hidden {
    top: -100%;
  }

  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  // overflow: hidden;
  z-index: -100;
  background: #000000;
}

.fullscreen-bg__video {
  position: relative;
  top: 0;
  left: -25vw;
  width: 150vw;
  height: 100vh;
  -webkit-filter: contrast(70%) brightness(70%) grayscale(100%);
  filter: contrast(70%) brightness(70%) grayscale(100%);

  @media only screen and (max-width: 992px) {
    display: none;
  }
}

.default-cover-container {
  display: flex;
  justify-content: center;
  flex-direction: column;
  align-items: center;
}

.cover-container {
  font-size: 12pt;
  display: flex;
  flex-direction: column;
  max-height: 100%;

  hr,
  br {
    width: 100%;
  }

  .sidebar {
    display: flex;
    flex-direction: column;
    justify-content: space-around;
    align-items: space-around;
    position: fixed;
    left: 0;
    background-color: $offwhite;
    margin-top: 60px;
    min-height: calc(100% - 280px);
    max-height: calc(100% - 280px);
    min-width: 19%;
    max-width: 19%;
    color: black;

    .il-video-pill {
      display: flex;
      justify-content: center;
      align-items: center;
      text-align: center;
      flex: 1;
      background-color: transparent;
      border-bottom: 5px solid black;
      transition: all 0.4s ease;

      &.explore {
        background-color: $yellow;
      }

      &.videos {
        background-color: blue;
      }

      &:hover {
        cursor: pointer;
        background-color: $darkwhite;
        color: white;
      }
    }
  }

  .hero {
    min-width: 100%;
    margin: 20px 0 40px;
    display: flex;
    flex-direction: column;

    .row {
      display: flex;
      flex: 1;
      flex-direction: row;

      justify-content: space-around;

      &.vertical {
        flex-direction: column;
      }

      .cell {
        border: 1px solid white;
        display: flex;
        justify-content: center;
        align-items: center;
        text-align: center;
        flex: 1;
        background-color: $darkgrey;
        padding: 10px 0;
        transition: all 0.4s ease;
        letter-spacing: 2px;
        min-height: 40px;

        &.small {
          letter-spacing: inherit;
          font-size: 10pt;
        }

        &.plain {
          min-height: 10px;
          background-color: black;
          letter-spacing: 1px;
        }

        &.yellow {
          color: $offwhite;
          background-color: $yellow;
        }

        &:hover {
          cursor: pointer;
          background-color: $offwhite;
          color: $yellow;
          border-color: $yellow;
        }
      }
    }
  }

  .cover-content {
    flex-direction: column;
    max-width: 600px;
    margin: 0 auto;
    overflow-y: auto;
    overflow-x: hidden;
    padding-bottom: 2em;

    h1,
    h2,
    h3,
    h4,
    h5 {
      text-align: center;
    }
    h2 {
      margin: 75px 0 15px;
    }

    h1 {
      margin-bottom: -15px;
      margin-top: 30px;
    }

    h5 {
      margin-top: -15px;
    }

    .md-container {
      width: 100%;
      overflow-wrap: break-word;
      // white-space: pre-line;

      ul {
        list-style: none;
      }

      li::before {
        content: "* ";
      }

      p {
        text-align: justify;
        font-size: 1.2rem;
        line-height: 1.65em;
      }
    }

    // mobile styles, remove overlay buttons
    @media only screen and (max-width: 1200px) {
      font-size: 22pt !important;
      max-width: 100vw;
      padding: 0 40px 80px 40px;
      margin-bottom: 0;
    }

    .verify-tabs {
      background-color: $yellow;
      color: black;
      display: flex;
      flex-direction: column;

      .v-tab {
        display: flex;
        margin: auto;
        justify-content: center;
        align-content: center;
        flex: 1;
      }
    }

    .il-cover-verification-container {
      display: flex;
      flex-direction: column;

      .il-cover-verification {
        .il-video {
          border-radius: 1em;
          background-color: rgba(240, 240, 240, 0.5);
        }
      }
    }
  }

  _::-webkit-full-page-media,
  _:future,
  :root .cover-content {
    max-width: auto;
  }
}

.cover-footer {
  &.disabled {
    display: none;
  }

  position: fixed;
  bottom: 0;
  min-height: 150px;
  min-width: 100%;
  padding: 10px;
  background-color: black;
  display: flex;
  justify-content: center;

  .il-cover-button {
    display: flex;
    justify-content: center;
    align-items: center;
    min-width: 300px;
    max-height: 80px;
    margin-top: 30px;
    background-color: $offwhite;
    color: black;
    transition: all 0.3s ease;

    &:hover {
      cursor: pointer;
      background-color: darken($offwhite, 30%);
      color: black;
    }
  }
}

